# VulkanGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VulkanGameEngine.code-workspace  \  compile_shaders.sh  debug.sh  gencmake.sh  main.c  makefile  runmake.sh  test.sh
debug/: debug.c  debug.h
setup/: CMakeLists.txt  sve_pipeline.h
shaders/: simple_shader.frag
src/: CMakeLists.txt  dependencies.h  main.c  sve_header.h
src/debug/: CMakeLists.txt  debug.c  debug.h
src/libs/: CMakeLists.txt
src/render/: CMakeLists.txt  render.h  sve_device.c  sve_device.h  sve_pipeline.c  sve_pipeline.h  sve_swapchain.c  sve_swapchain.h  sve_window.c  sve_window.h
src/render/setup/: CMakeLists.txt  initvk.c  initvk.h  sve_device.c  sve_device.h  sve_init.c  sve_init.h  sve_pipeline.c  sve_pipeline.h
src/utilities/: CMakeLists.txt  fileutils.c  fileutils.h  string.txt  utilities.h
src/utilities/datastructures/: binary_tree.h  linked_list.c  linked_list.h
src/utilities/debug/: debug.c  debug.h
utilities/: fileutils.c  fileutils.h  utilities.c
